smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/defaults/default-missing-value.smithy
// Parse error at line 7, column 18 near `\n}`: Expected a valid identifier character, but found '\n' | Model
$version: "2.0"

namespace com.foo

structure Foo {
    bar: String =
}
